--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,7 +11,7 @@
 @import "compass/css3/images";
 @import "compass/css3/text-shadow";
 @import "fancy-buttons";
-//@import "atk_icons";
+@import "atk_icons";
 
 $standard-color: #700;
 
