--- a/app/views/exercises/show.html.haml
+++ b/app/views/exercises/show.html.haml
@@ -5,6 +5,11 @@
 
 #notes
   = render "notes/form"
+  %fieldset.note-list
+    %legend=t('.notes')
+    %div
+      = render current_user.notes_for(@selection.character)
+.clear
 
 
 #buttons
