--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for @note do |f|
+= semantic_form_for @note, :remote => true do |f|
   = f.inputs t('.add-note') do
     %div
       = f.input :body, :label => false
