styling for notes

--- a/app/assets/stylesheets/exercises.css.scss
+++ b/app/assets/stylesheets/exercises.css.scss
@@ -9,9 +9,8 @@
   }
   .exercise {
     float: left;
-    margin-right: 20px;
-    min-width: 300px;
-    max-width: 500px;
+    margin-right: 2%;
+    width: 45%;
   }
   &:after {
     clear: both;
